// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShiftViewFooterMenu > renders correctly 1`] = `
<v-bottom-navigation-stub
  absolute="false"
  active="true"
  border="false"
  class="bg-lw-background shiftview-footer"
  data-v-ab44830c=""
  density="default"
  disabled="false"
  grow="false"
  height="48"
  horizontal="false"
  mandatory="false"
  multiple="false"
  name="bottom-navigation"
  order="0"
  selectedclass="v-btn--selected"
  tag="header"
  tile="false"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    data-v-ab44830c=""
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <shiftview-shift-options-menu-stub
      data-v-ab44830c=""
      requireoperator="false"
    />
  </v-menu-stub>
  <!--v-if-->
  
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-operator"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-changeover"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-stoppages"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-speedloss"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-scrap"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-checklists"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-messages"
    item="[object Object]"
  />
  
</v-bottom-navigation-stub>
`;

exports[`ShiftViewFooterMenu > renders correctly if isSelectionActive is true 1`] = `
<v-bottom-navigation-stub
  absolute="false"
  active="true"
  border="false"
  class="bg-lw-background shiftview-footer shiftview-footer--disabled"
  data-v-ab44830c=""
  density="default"
  disabled="true"
  grow="false"
  height="48"
  horizontal="false"
  mandatory="false"
  multiple="false"
  name="bottom-navigation"
  order="0"
  selectedclass="v-btn--selected"
  tag="header"
  tile="false"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    data-v-ab44830c=""
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <shiftview-shift-options-menu-stub
      data-v-ab44830c=""
      requireoperator="false"
    />
  </v-menu-stub>
  <!--v-if-->
  
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-operator"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-stoppages"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-speedloss"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-scrap"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-checklists"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-messages"
    item="[object Object]"
  />
  
</v-bottom-navigation-stub>
`;

exports[`ShiftViewFooterMenu > renders correctly if user has multiple lineview languages 1`] = `
<v-bottom-navigation-stub
  absolute="false"
  active="true"
  border="false"
  class="bg-lw-background shiftview-footer"
  data-v-ab44830c=""
  density="default"
  disabled="false"
  grow="false"
  height="48"
  horizontal="false"
  mandatory="false"
  multiple="false"
  name="bottom-navigation"
  order="0"
  selectedclass="v-btn--selected"
  tag="header"
  tile="false"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    data-v-ab44830c=""
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <shiftview-shift-options-menu-stub
      data-v-ab44830c=""
      requireoperator="false"
    />
  </v-menu-stub>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    data-v-ab44830c=""
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <language-select-menu-stub
      data-v-ab44830c=""
    />
  </v-menu-stub>
  
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-operator"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-changeover"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-stoppages"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-speedloss"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-scrap"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-checklists"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-messages"
    item="[object Object]"
  />
  
</v-bottom-navigation-stub>
`;

exports[`ShiftViewFooterMenu > renders correctly if user has multiple lineview languages and screen size is less than 600px 1`] = `
<v-bottom-navigation-stub
  absolute="false"
  active="true"
  border="false"
  class="bg-lw-background shiftview-footer"
  data-v-ab44830c=""
  density="default"
  disabled="false"
  grow="false"
  height="48"
  horizontal="false"
  mandatory="false"
  multiple="false"
  name="bottom-navigation"
  order="0"
  selectedclass="v-btn--selected"
  tag="header"
  tile="false"
>
  <v-menu-stub
    activatorprops="[object Object]"
    attach="false"
    capturefocus="true"
    closedelay="250"
    closeonback="true"
    closeoncontentclick="true"
    contained="false"
    data-v-ab44830c=""
    disabled="false"
    disableinitialfocus="false"
    eager="false"
    locationstrategy="connected"
    modelvalue="false"
    noclickanimation="false"
    opendelay="300"
    openonhover="false"
    origin="auto"
    persistent="false"
    retainfocus="false"
    scrim="false"
    scrollstrategy="reposition"
    sticktotarget="false"
    submenu="false"
    transition="[object Object]"
    viewportmargin="12"
    zindex="2000"
  >
    <shiftview-shift-options-menu-stub
      data-v-ab44830c=""
      requireoperator="false"
    />
  </v-menu-stub>
  <!--v-if-->
  
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-operator"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-stoppages"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-speedloss"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-scrap"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-checklists"
    item="[object Object]"
  />
  <shift-view-footer-menu-item-stub
    data-v-ab44830c=""
    id="footer-item-messages"
    item="[object Object]"
  />
  
</v-bottom-navigation-stub>
`;
